addded all code

--- a/main.html
+++ b/main.html
@@ -8,7 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>abc</h1>
+	<h1>What is the capital of India?</h1><br>
+	<input type="radio" name="New Delhi" value="New Delhi">New Delhi<br>
+	<input type="radio" name="Mumbai" value="Mumbai">Mumbai<br>
+
+	<blockquote class="quote">Delhi is the capital of India and an administrative district of NCT Delhi</blockquote>
+
+
+
     <script type="text/javascript" src="./script.js">
 </script>
 
