changes made in radio button

--- a/main.html
+++ b/main.html
@@ -9,10 +9,12 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>What is the capital of India?</h1><br>
-	<input type="radio" name="New Delhi" value="New Delhi">New Delhi<br>
-	<input type="radio" name="Mumbai" value="Mumbai">Mumbai<br>
+	<input type="radio" name="city" value="New Delhi">
+	<label for="New Delhi">Delhi</label><br>
+	<input type="radio" name="city" value="Mumbai">
+	<label for="Mumbai">Mumbai</label><br>
 
-	<blockquote class="quote">Delhi is the capital of India and an administrative district of NCT Delhi</blockquote>
+	<blockquote class="quote"> New Delhi is the capital of India and an administrative district of NCT Delhi</blockquote>
 
 
 
