added cite link

--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 	<input type="radio" name="city" value="Mumbai">
 	<label for="Mumbai">Mumbai</label><br>
 
-	<blockquote class="quote"> New Delhi is the capital of India and an administrative district of NCT Delhi</blockquote>
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi"> New Delhi is the capital of India and an administrative district of NCT Delhi</blockquote>
 
 
 
